# unifi-release-announcer

./: .dockerignore  .gitignore  .release-please-config.json  404.html  CHANGELOG.md  DOCS_SUMMARY.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  fix_imports.py  fix_types.py  index.html  last_release_url.txt  main.py  mkdocs.yml  patch_lock.py  patch_lock2.py  pyproject.toml  release_parser.py  release_parser.py.orig  renovate.json  scraper.py  scraper_interface.py  state_manager.py  test_graphql_backend.py  test_integration.py  test_lock.py  test_lock_init.py  test_runner.py  test_scraper.py  test_scraper_interface.py  test_state_manager.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  release.yaml
advanced/: index.html
api/: index.html
configuration/: index.html
contributing/: index.html
deployment/: index.html
docs/: advanced.md  api.md  configuration.md  contributing.md  deployment.md  index.md  installation.md  quickstart.md  troubleshooting.md
installation/: index.html
k8s/: README.md  deployment.yaml  kustomization.yaml  secret.yaml
quickstart/: index.html
scraper_backends/: __init__.py  graphql_backend.py  httpx_backend.py  playwright_backend.py  rss_backend.py  selenium_backend.py
search/: search_index.json
tests/: __init__.py  test_graphql_backend.py  test_integration.py  test_main.py  test_release_parser.py  test_scraper_interface.py  test_state_manager.py
troubleshooting/: index.html
