[project]
name = "unifi-release-announcer"
version = "0.1.0"
description = "Discord bot that announces new UniFi Protect releases"
authors = [
    {name = "damacus"}
]
requires-python = ">=3.13"
dependencies = [
    "discord.py",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "respx",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = []

[tool.setuptools.packages.find]
where = ["./"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
