[project]
name = "unifi-release-announcer"
version = "0.2.2"
description = "Discord bot that announces new UniFi releases"
authors = [
    {name = "damacus"}
]
requires-python = ">=3.13"
dependencies = [
    "discord.py",
    "aiohttp>=3.9.0",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "respx",
    "pytest-asyncio",
    "mkdocs",
    "mkdocs-material",
]

[tool.ruff]
line-length = 120
target-version = "py313"
cache-dir = ".ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = []

[tool.setuptools.packages.find]
where = ["./"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
cache_dir = ".mypy_cache"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
cache_dir = ".pytest_cache"
pythonpath = ["."]

[dependency-groups]
dev = [
    "types-aiofiles>=25.1.0.20251011",
    "types-requests>=2.32.4.20260107",
]

[project.scripts]
test = "pytest"
test-all = "pytest -v"
